# microcosm

./: .gitignore  CMakeLists.txt  README.md  build.bat
contrib/asio/: CMakeLists.txt
src/: CMakeLists.txt  microcosm.sln
src/Microcosm.Core/: AbstractActor.cs  Class1.cs  Microcosm.Core.csproj  NodeAddress.cs
src/Microcosm.Core/Actor/: AbstractBehavior.cs  ActorContext.cs  Behavior.cs  BehaviorBuilder.cs  Behaviors.cs  Receive.cs
src/Microcosm.Core/Network/: ConnectionEndPoint.cs  ConnectionHub.cs  ConnectionSession.cs
src/Microcosm.Core/Protocol/: Invoke.cs  Packet.cs  Ping.cs  Pong.cs  Protocol.cs  Responce.cs
src/Microcosm.Demo.Gateway/: Microcosm.Demo.Gateway.csproj  Program.cs
src/Microcosm.Demo.Server/: Microcosm.Demo.Server.csproj  Program.cs  TestActor.cs
src/Microcosm.Gateway/: Gateway.cs  GatewaySettings.cs  Microcosm.Gateway.csproj
src/client/: CMakeLists.txt
src/common/: CMakeLists.txt
src/gateway/: CMakeLists.txt
src/microcosm/: Program.cs
src/microcosm.Server/: NodeState.cs  NodeTable.cs  NodeType.cs  Server.cs  ServerSettings.cs
src/server/: CMakeLists.txt
